# DataLib

./: .gitignore  requirements.txt  setup.cfg  setup.py
.github/workflows/: blank.yml
docs/: conf.py  datalib.data.rst  datalib.rst  datalib.stats.rst  documentation.rst  index.rst
docs/source/: conf.py  datalib.analysis.rst  datalib.visualization.rst  index.rst
examples/: example_usage.py
src/datalib/: utils.py
src/datalib/analysis/: classification.py  clustering.py  regression.py
src/datalib/data/: csv_handler.py  data_cleaning.py
src/datalib/stats/: descriptive_stats.py  statistical_tests.py
src/datalib/visualization/: advanced_plots.py  simple_plots.py
tests/: test_advanced_plots.py  test_classification.py  test_csv_handler.py  test_data_cleaning.py  test_descriptive_stats.py  test_regression.py  test_simple_plots.py  test_statistical_tests.py
