[metadata]
name = datalib
version = 0.1.0
description = A Python library for data manipulation and analysis
author = Your Name
license = MIT
[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    numpy
    pandas
    matplotlib
    scikit-learn
[options.package_data]
* = *.txt, *.rst
